--- a/result.html
+++ b/result.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generated CV</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="result.js" ></script>
 </head>
 <body>
     <header>
@@ -15,5 +16,6 @@
             <!-- Generated CV content will appear here -->
         </div>
     </main>
+    <button type="button" id="download-button" onclick="downloadCV()">Télécharger le CV</button>
 </body>
 </html>
